@startuml

package Robot{
	class ActorUnit{
		- actionSender : ActionSender
		+ Act(LowLevelActionOpetration)
	}
	class SensorUnit{
		+ getSensorData()
	}
}

package EvaluationSystem{
	class Env{
		- sensorUnit : SensorUnit
		- envData : float
		+ GetEnvData() : float
	}
	abstract Evaluation{
		- env : Env
		- evaluationResult : Result
		+ EvaluateEnvironment(Env) : Result
	}
	class ConcleteEvaluation{
		+ ConcleteEvaluateEnvironment(Env) : Result
	}

	abstract Result{
		' 対象とする環境の評価データ
		' 負(過小、不足) < 0(適度) < 正(過度、過剰)
		int evaluationScore
		int GetEvaluationScore(params int[] numbers)
	}
	class TemperatureResult{
		int temperatureScore
	}
	class HumidityResult{
		int humidityScore
	}
}

SensorUnit --> Env : 環境データを送信
Env --> Evaluation : 評価したいデータを送信
Evaluation <-- Result : 評価結果のフォーマットを定義
Evaluation <|-- ConcleteEvaluation : 実装
Result <|-- TemperatureResult : 実装
Result <|-- HumidityResult : 実装


package ActionDecisionSystem{
	class ActionOperator{
		- evaluation : Evaluation
		- result : Result
	}
	class Action
	class ActionSender{
		+ SendAction(Action)
	}
}

Evaluation --> ActionOperator : 評価結果を送信
ActionOperator --> Action : Actionを生成
Action --> ActionSender : Actionを送信。内容を読み取り
ActionSender --> ActorUnit : 低レイヤーの行動命令を送信

@enduml

@startuml Sensor and Dummy

interface SensorUnit {
	+ GetSensorInfo() : SensorInfo
}

class Sensor {
	+ GetSensorInfo() : SensorInfo
}

class Dummy {
	+ GetSensorInfo() : SensorInfo
}

class Evaluation {
	- sensorUnit : SensorUnit
	+ ReadInfo() : void
}

SensorUnit <|.. Sensor : implements
SensorUnit <|.. Dummy : implements
Evaluation -left-> SensorUnit

@enduml

@startuml rebuild
Package Unity{
	class toio_sdk{}
	struct SerialConfig{}
}
Package weak-toio{
	class SerialHundler{}
	class M5DataReceiver{}
	class DummyDataGenerator{}
	abstract SensorUnit{}
	abstract Evaluation{}
	class Action{}

	SerialConfig --> SerialHundler : シリアル通信を設定
	SerialHundler --> M5DataReceiver : シリアルデータを送信
	SensorUnit <|-- M5DataReceiver : 継承
	SensorUnit <|-- DummyDataGenerator : 継承
	Evaluation <-- SensorUnit : センサー情報を送信
	Evaluation --> Action : 評価結果を送信
	Action --> toio_sdk : 行動命令を送信

}
@enduml